Archive/bcb0a3661b7aa7b21983f5a598205802-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:6:35: error: expected initializer before ‘i’
     std::vector<int>&::value_type i = 1234;
                                   ^
